#ifndef PROTOCOL_H
#define PROTOCOL_H

#include "common/dto/events/command.h"
#include "common/dto/lobby/create_player.h"
#include "common/dto/lobby/credentials.h"
#include "common/dto/lobby/existence.h"
#include "common/dto/message.h"
#include "common/dto/snapshot/map/client_map_data.h"
#include "common/dto/snapshot/snapshot.h"
#include "common/socket.h"

class Protocol {
private:
    Socket& socket;

    void check_header_message_byte(const Message& expected);

public:
    explicit Protocol(Socket& socket);  // NOLINT

    void send(const ProtocolMessageDTO& dto);

    CredentialsDTO recv_credentials();

    ExistenceDTO recv_existence();

    ClientMapDataDTO recv_map();

    CreatePlayerDTO recv_appearance();

    SnapshotDTO recv_snapshot();

    RequestedCommandDTO recv_command();
};

#endif  // PROTOCOL_H
